fix z-index

--- a/src/pages/game/lottery.css
+++ b/src/pages/game/lottery.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100vh;
     position: absolute;
-    z-index: 1000;
+    z-index: 10000;
     top: 60px;
     left: 0;
     background-color: rgba(0, 0, 0, 0.7);
